Fix dropdown hover contrast: use primary-color for text on light hover background

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -267,7 +267,7 @@
       color: $text-color;
 
       &:hover {
-        color: $masthead-link-color-hover;
+        color: $primary-color;
         background: mix(#fff, $primary-color, 75%);
       }
     }
